[gd_scene load_steps=13 format=2]

[ext_resource path="res://ASSETS/Art/Molten Metal.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Hazards/MoltenMetalBig.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/Audio/deathNoises/sizzleShort.mp3" type="AudioStream" id=3]
[ext_resource path="res://ASSETS/Audio/ambientNoises/slurpSound.mp3" type="AudioStream" id=4]

[sub_resource type="Animation" id=3]
resource_name = "MetalMove"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "MetalMove"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "MetalMove"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 214.5, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 220.5, 32.75 )

[node name="MoltenMetalBig" type="Node2D"]
script = ExtResource( 2 )

[node name="M1" type="Sprite" parent="."]
position = Vector2( -150, 0 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer1" type="AnimationPlayer" parent="M1"]
autoplay = "MetalMove"
anims/MetalMove = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="M2" type="Sprite" parent="."]
scale = Vector2( 1, 0.8 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer2" type="AnimationPlayer" parent="M2"]
autoplay = "MetalMove"
anims/MetalMove = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="M3" type="Sprite" parent="."]
position = Vector2( 150, 0 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer3" type="AnimationPlayer" parent="M3"]
autoplay = "MetalMove"
anims/MetalMove = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 3, 46 )
shape = SubResource( 7 )

[node name="SlowArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowArea"]
position = Vector2( -0.5, -25.25 )
shape = SubResource( 8 )

[node name="MoltenSizzle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 2.0
pitch_scale = 1.3

[node name="RobertDrinkLava" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 3.354

[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="body_entered" from="SlowArea" to="." method="_on_SlowArea_body_entered"]
[connection signal="finished" from="MoltenSizzle" to="." method="_on_MoltenSizzle_finished"]
[connection signal="finished" from="RobertDrinkLava" to="." method="_on_RobertDrinkLava_finished"]
